[gd_scene load_steps=8 format=3 uid="uid://kbryvmo0ma51"]

[ext_resource type="Script" path="res://hud.gd" id="1_lgjky"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b3fny"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sb0t6"]
bg_color = Color(0.827451, 0.866667, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u5edt"]
bg_color = Color(0.6, 0.6, 0.6, 0)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aos63"]
bg_color = Color(0.979658, 0.349311, 0.430485, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dg7ds"]
bg_color = Color(0.230315, 0.230315, 0.230315, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e1ye2"]
bg_color = Color(0, 0.294118, 0.854902, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Hud" type="CanvasLayer"]
script = ExtResource("1_lgjky")

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.5
offset_top = -86.0
offset_right = 88.5
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 64
text = "Start"

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -302.5
offset_top = -120.0
offset_right = 302.5
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "Smite The Undead!
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HealthBarDelta" type="ProgressBar" parent="."]
offset_left = 12.0
offset_top = 575.0
offset_right = 215.0
offset_bottom = 583.0
theme_override_styles/background = SubResource("StyleBoxFlat_b3fny")
theme_override_styles/fill = SubResource("StyleBoxFlat_sb0t6")
max_value = 1.0
step = 0.001
value = 1.0
show_percentage = false

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 12.0
offset_top = 575.0
offset_right = 215.0
offset_bottom = 583.0
theme_override_styles/background = SubResource("StyleBoxFlat_u5edt")
theme_override_styles/fill = SubResource("StyleBoxFlat_aos63")
max_value = 1.0
value = 1.0
show_percentage = false

[node name="StaminaBar" type="ProgressBar" parent="."]
offset_left = 12.0
offset_top = 586.0
offset_right = 215.0
offset_bottom = 591.0
theme_override_styles/background = SubResource("StyleBoxFlat_dg7ds")
theme_override_styles/fill = SubResource("StyleBoxFlat_e1ye2")
max_value = 1.0
value = 1.0
show_percentage = false

[node name="InventoryItem1" type="Node2D" parent="."]
position = Vector2(16, 568)

[node name="InventoryItem2" type="Node2D" parent="."]
position = Vector2(32, 568)

[node name="InventoryItem3" type="Node2D" parent="."]
position = Vector2(48, 568)

[node name="InventoryItem4" type="Node2D" parent="."]
position = Vector2(64, 568)

[node name="InventoryItem5" type="Node2D" parent="."]
position = Vector2(80, 568)

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
